--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
+*.dot
+*.dylib
+*.prof
 *.pyc
 *.pyd
-*.dylib
 *.so
-coverage.html/*
-_cache/*
 .coverage
-dist/*
-build/*
 .eggs/*
+_cache/*
+build/*
+dist/*
 *egg-info/*
 onnxruntime_profile*
 prof
 temp_*
+.ipynb_checkpoints
 _doc/CHANGELOGS.rst
 _doc/LICENSE.txt
 _doc/auto_examples/*
@@ -27,3 +29,5 @@ _unittests/ut__main/*.png
 _unittests/ut__main/_cache/*
 _unittests/ut__main/*.html
 _unittests/.hypothesis/*
+_doc/notebooks/ml/*.onnx
+_doc/notebooks/dsgarden/*.onnx
