--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,15 +47,50 @@ exclude = [
     "dist",
 ]
 
-# Same as Black.
 line-length = 88
 
-[tool.ruff.mccabe]
-# Unlike Flake8, default to a complexity level of 10.
-max-complexity = 10
+[tool.ruff.lint]
+select = [
+    "B", # flake8-bugbear
+    "C4", # flake8-comprehensions
+    #"D", # pydocstyle
+    "E", # pycodestyle
+    "F", # Pyflakes
+    "G", # flake8-logging-format
+    #"I", # isort
+    "ISC", # flake8-implicit-str-concat
+    "LOG", # flake8-logging
+    #"N", # pep8-naming
+    #"NPY", # modern numpy
+    #"PERF", # Perflint
+    "PIE", # flake8-pie
+    "PYI", # flake8-pyi
+    "RUF", # Ruff-specific rules
+    "SIM", # flake8-simplify
+    "SLOT", # flake8-slot
+    "T10", # flake8-debugger
+    #"TID", # Disallow relative imports
+    #"TRY", # flake8-try-except-raise
+    "UP", # pyupgrade
+    "W", # pycodestyle
+    "YTT", # flake8-2020
+]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
+"**" = [
+    "B905",
+    "C401", "C408", "C413",
+    "RUF012", "RUF100", "RUF010",
+    "SIM108", "SIM910", "SIM110", "SIM102", "SIM114", "SIM103",
+    "UP015", "UP027", "UP031", "UP034", "UP032", "UP006", "UP035", "UP007", "UP030", "UP038"
+]
+"_unittests/**" = ["SIM113", "RUF005", "E402"]
+"**/plot*.py" = ["B018"]
 "_doc/sphinxdoc/source/conf.py" = ["F821"]
+"_doc/notebooks/dsgarden/**" = ["B007", "E402"]
+"_doc/notebooks/metric/**" = ["C400", "RUF005", "B007", "C417"]
+"_doc/notebooks/ml/**" = ["E402", "B007", "RUF005"]
+"_doc/notebooks/nlp/**" = ["RUF005", "E501", "F811", "E401", "E402"]
 "mlstatpy/__init__.py" = ["E501"]
 "mlstatpy/graph/__init__.py" = ["F401"]
 "mlstatpy/graph/graph_distance.py" = ["E731"]
