--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,6 @@
 astroid
 autopep8
 black
-black-nb
 blockdiag
 coverage
 Cython
@@ -16,7 +15,7 @@ isort
 jdcal
 jupyter_sphinx
 jupyter
-jyquickhelper
+jupyter-black
 lifelines
 mako
 matplotlib
@@ -31,19 +30,15 @@ pandas
 pillow
 psutil
 pybind11
-pycodestyle
 pydata_sphinx_theme
-pyensae>=1.2.788
 pyinstrument
-pylint>=2.14.0
-pyquickhelper>=1.12
 pytest
 ruff
 seaborn
 setuptools
 snakeviz
 scikit-learn>=1.1
-git+https://github.com/onnx/sklearn-onnx.git
+sklearn-onnx
 sphinx
 sphinx-gallery
 sphinx-issues
