--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,11 @@
 astroid
-autopep8
 black
-black-nb
 blockdiag
 coverage
 Cython
 cytoolz
 dill
+graphviz
 hummingbird-ml
 ijson
 importlib_metadata
@@ -16,39 +15,33 @@ isort
 jdcal
 jupyter_sphinx
 jupyter
-jyquickhelper
+jupyter-black
 lifelines
-mako
 matplotlib
 memory_profiler
 mlinsights
 nbconvert
 nbsphinx
 notebook
-onnx_array_api
+onnx-array-api
+onnx-extended
 onnxruntime>=1.12
 pandas
 pillow
 psutil
 pybind11
-pycodestyle
 pydata_sphinx_theme
-pyensae>=1.2.788
 pyinstrument
-pylint>=2.14.0
-pyquickhelper>=1.12
 pytest
 ruff
 seaborn
-setuptools
 snakeviz
 scikit-learn>=1.1
-git+https://github.com/onnx/sklearn-onnx.git
+skl2onnx
 sphinx
 sphinx-gallery
 sphinx-issues
 git+https://github.com/sdpython/sphinx-runpython.git
-sphinxcontrib.imagesvg
 stack_data
 statsmodels
 tqdm
