--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -41,6 +41,7 @@ skl2onnx
 sphinx
 sphinx-gallery
 sphinx-issues
+sphinxcontrib-blockdiag
 git+https://github.com/sdpython/sphinx-runpython.git
 stack_data
 statsmodels
