--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -35,7 +35,7 @@ jobs:
         run: python -m pip install -r requirements-dev.txt
 
       - name: Cache pip
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('requirements-dev.txt') }}
@@ -52,7 +52,7 @@ jobs:
           export PYTHONPATH=
 
       - name: test notebooks
-        run: python -m pytest _unittests/ut_xrun_doc/test_documentation_notebook.py --durations=10
+        run: SCIPY_ARRAY_API=1 python -m pytest _unittests/ut_xrun_doc/test_documentation_notebook.py --durations=10
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
@@ -68,7 +68,7 @@ jobs:
         run: cp CHANGELOGS* ./_doc
 
       - name: Documentation
-        run: python -m sphinx ./_doc ./dist/html -n -w doc.txt
+        run: SCIPY_ARRAY_API=1 python -m sphinx ./_doc ./dist/html -n -w doc.txt
 
       - name: Summary
         run: cat doc.txt
@@ -86,6 +86,6 @@ jobs:
             exit 1
           fi
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           path: ./dist/html/**
