--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,5 @@
 astroid
 black
-blockdiag
 coverage
 Cython
 cytoolz
@@ -24,9 +23,10 @@ mlinsights
 nbconvert
 nbsphinx
 notebook
+onnxscript
 onnx-array-api
-onnx-extended
-onnxruntime>=1.12
+onnx-diagnostic
+onnxruntime>=1.23
 pandas
 pillow
 psutil
@@ -37,17 +37,17 @@ pytest
 ruff
 seaborn
 snakeviz
-scikit-learn>=1.1
+scikit-learn>=1.5
 skl2onnx
 sphinx
 sphinx-gallery
 sphinx-issues
-sphinxcontrib-blockdiag
-git+https://github.com/sdpython/sphinx-runpython.git
+sphinx-runpython
 stack_data
 statsmodels
 tqdm
 traitlets
+transformers
 vprof
 wheel
 xgboost
